# subtitler

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties  stack.env.example
.github/workflows/: build.yml  docker.yml
subtitler/: assembler.py  cli.py  config.py  extractor.py  models.py  ocr.py  probe.py  progress.py  scanner.py  web.py
subtitler/parsers/: pgs.py  vobsub.py
