[project]
name = "subtitler"
version = "0.1.0"
description = "OCR image-based subtitles (PGS/VobSub) using vision LLMs"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "rich>=13.0",
]

[project.scripts]
subtitler = "subtitler.cli:main"
subtitler-gui = "subtitler.web:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
